--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="header-card">link 3</div>
         </div>
         <div id="sidebar" class="card-container">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">b</div>
+            <div class="card">c</div>
+            <div class="card">d</div>
+            <div class="card">e</div>
         </div>
         <div id="nav" class="card-container">
             <div class="header-card">LATEST ARTICLES</div>
